# Android_Engineer

./: .gitmodules  CHANGELOG.md  DECISIONS.md  MODELS.md  PRIVACY.md  PROGRESS.md  README.md  RELEASE.md  RISKS.md  ROADMAP.md  TESTPLAN.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model_catalog.json
app/src/main/java/dev/slate/ai/: MainActivity.kt  SlateApplication.kt
app/src/main/java/dev/slate/ai/navigation/: SlateNavGraph.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: ic_launcher_colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
core/core-common/: build.gradle.kts
core/core-data/: build.gradle.kts
core/core-database/: build.gradle.kts
core/core-database/schemas/dev.slate.ai.core.database.SlateDatabase/: 1.json  2.json
core/core-datastore/: build.gradle.kts
core/core-model/: build.gradle.kts
core/core-network/: build.gradle.kts
core/core-ui/: build.gradle.kts
core/core-ui/src/main/java/dev/slate/ai/core/ui/theme/: Color.kt  (+2 more)
download/download-engine/: build.gradle.kts
feature/feature-chat/: build.gradle.kts
feature/feature-models/: build.gradle.kts
feature/feature-onboarding/: build.gradle.kts
feature/feature-settings/: build.gradle.kts
gradle/: libs.versions.toml
inference/inference-llamacpp/: build.gradle.kts
inference/inference-llamacpp/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
(+62 files in other folders)
